# dirr

./: .env.example  .gitignore  AGENTS.md  API_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Makefile  POLYMARKET_ANALYSIS_2025.md  TUI_GUIDE.md  all_files.txt  check_api.py  install.sh  mock_trades_server.py  monitor_trades.py  polymarket_monitor.py  pyproject.toml  requirements.txt  run.py  setup_project.sh  test_polymarket_monitor.py  trade_sample.json
bot/: .dockerignore  .gitattributes  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup_project.sh
bot/src/: alert_system.py  config.py  database.py  logger.py  polymarket_api.py  slack_notifier.py  tracker.py  wallet_tracker.py
central_system/: .gitignore  README.md  requirements.txt
central_system/backend/: alerts.py  analysis.py  api.py  monitor.py
central_system/frontend/: dashboard.py
central_system/tests/: test_analysis.py  test_system.py
docs/: TODO_BACKLOG.md
invision/: ffmpeg.py
polymarket_monitors/: .env  AGENTS.md
polyterm/: __init__.py
polyterm/api/: subgraph.py
polyterm/cli/commands/: groups.py  (+6 more)
polyterm/db/: models.py
src/: __init__.py  anomaly_detector.py  main.py
terminal/: API_SETUP.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  install.sh  polymarket_docs.md  requirements.txt  roadmap.md  setup.py  test_all_commands.sh
terminal/docs/: COMPETITIVE_GAP.md  EXECUTION_ROADMAP.md
terminal/examples/: simple_monitor.py  whale_tracker.py
tests/test_api/: test_clob.py
(+102 files in other folders)
